--- a/bmm/templates/nginx.conf.j2
+++ b/bmm/templates/nginx.conf.j2
@@ -1,6 +1,6 @@
 upstream webapp {
 {% for server in groups.webservers %}
-  server {{ server.ansible_host }};
+  server {{ server }};
 {% endfor %}
 }
 
